alteração simples no index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="./assets/logo.svg" alt="logo">
                 <a href="http://www.google.com.br">
                     <span></span>
-                    Cadastre um ponto de coleta
+                    Cadastre um ponto de coleta agora
                 </a>
             </header>
 
